# travel-video-assembler

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml
src/travel_video/: cache.py  cli.py  config.py  deps.py  geocode.py  logging_setup.py  metadata.py  models.py  planner.py  renderer.py  scanner.py
src/travel_video/ffmpeg/: commands.py  filters.py
src/travel_video/overlays/: day_separator.py  location_label.py  mini_map.py
tests/: test_cache.py  test_cli.py  test_commands.py  test_deps.py  test_filters.py  test_geocode.py  test_metadata.py  test_overlays.py  test_planner.py  test_renderer.py  test_scanner.py
tests/fixtures/: exif_composite_rotation.json  exif_duration_string.json  exif_full.json  exif_gps_directional.json  exif_gps_south.json  exif_no_date.json  exif_no_gps.json
